Update package names to correct versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,10 @@ dependencies = [
     "langchain-pinecone>=0.2.0",
     "langchain-community>=0.3.0",
     "langsmith>=0.2.0",
-    "pinecone-client>=5.0.0",
+    "pinecone>=5.0.0",
     "firecrawl-py>=1.0.0",
-    "zep-python>=2.0.0",
+    "zep-cloud>=2.0.0",
+    "langchain-text-splitters>=0.3.0",
     "guardrails-ai>=0.5.0",
     "ollama>=0.3.0",
     "pypdf>=4.0.0",
